# taskhub

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml
alembic/: env.py
alembic/versions/: 60129cee0a45_initial_schema.py
app/: __init__.py  main.py
app/api/: __init__.py  task.py  user.py
app/core/: __init__.py  auth.py  config.py
app/db/: __init__.py  database.py  dependencies.py
app/models/: __init__.py  task.py  user.py
app/schemas/: __init__.py  task.py  token.py  user.py
tests/: __init__.py  conftest.py  test_auth.py  test_tasks.py  test_users.py
